added less files and code to less files

--- a/less/navigation.less
+++ b/less/navigation.less
@@ -1,2 +1,24 @@
 /*NAVIGATION LESS Document */
 
+
+// Navigation code here
+
+.navigation{
+	
+	display:flex;
+	flex-direction:column;
+	align-items:center;
+	
+	margin:0 0 10px 0;
+	
+	h2{
+		margin:20px 0;
+	}
+	
+	ul{
+		width:50%;
+		display:flex;
+		justify-content:space-evenly;
+	}
+	
+}
