navigaion color set and image logo uploaded

--- a/less/navigation.less
+++ b/less/navigation.less
@@ -6,14 +6,11 @@
 .navigation{
 	
 	display:flex;
-	flex-direction:column;
+	justify-content: flex-end;
 	align-items:center;
-	
+	background-color: #0A2738;
 	margin:0 0 10px 0;
-	
-	h2{
-		margin:20px 0;
-	}
+	height: 46px;
 	
 	ul{
 		width:50%;
