--- a/css/index.css
+++ b/css/index.css
@@ -197,3 +197,22 @@ footer {
   align-items: center;
 }
 /*HOME-PAGE LESS Document */
+.header-container {
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  padding: 0 5%;
+  margin: 2% 2%;
+}
+.header-container .login {
+  color: #2196F3;
+  margin: 0 0 20px 50%;
+  text-decoration: underline;
+  font-weight: bold;
+}
+.header-container h2 {
+  margin: 0 0 0 10px;
+}
+.header-container p {
+  margin: 0 0 0 30px;
+}
