--- a/less/home-page.less
+++ b/less/home-page.less
@@ -1,2 +1,26 @@
 /*HOME-PAGE LESS Document */
 
+
+.header-container{
+	display:flex;
+	justify-content: flex-start;
+	align-items: center;
+	padding: 0 5%;
+	margin:2% 2%;
+
+	.login{
+		color:#2196F3;
+		margin:0 0 20px 50%;
+		text-decoration:underline;
+		font-weight:bold;
+	}
+	
+	h2{
+		margin:0 0 0 10px;
+	}
+	
+	p{
+		margin: 0 0 0 30px;
+	}
+
+}
