--- a/less/home-page.less
+++ b/less/home-page.less
@@ -6,7 +6,7 @@
 	justify-content: flex-start;
 	align-items: center;
 	padding: 0 5%;
-	margin:2% 2%;
+	margin:1% 1%;
 
 	.login{
 		color:#2196F3;
@@ -22,5 +22,11 @@
 	p{
 		margin: 0 0 0 30px;
 	}
+	
 
 }
+
+	.signup{
+		text-decoration:underline;
+		font-weight:bold;
+	}
