--- a/less/global.less
+++ b/less/global.less
@@ -10,12 +10,12 @@ html {
 }
 
 html, body {
-  font-family: 'Ubuntu', sans-serif;
+  font-family: 'Roboto Slab', serif;
 
 }
 
 h1, h2, h3, h4, h5 {
-  font-family: 'Russo One', sans-serif;
+  font-family: 'Roboto Slab', serif;
 }
 
 h1{
@@ -23,7 +23,12 @@ h1{
 }
 
 h2 {
-  font-size: 3.2rem;
+  	font-size: 3.2rem;
+	color: @dodger-blue;
+	font-style: normal;
+	font-weight: bold;
+	font-size: 48px;
+	line-height: 63px;
 }
 
 h3 {
@@ -31,8 +36,10 @@ h3 {
 }
 
 p {
-  font-size: 1.6rem;
-  line-height: 1.4;
+	font-size: 1.6rem;
+	font-style: normal;
+	font-weight: normal;
+	font-size: 24px;
 }
 
 a {
