added mobile variable

--- a/less/home-page.less
+++ b/less/home-page.less
@@ -9,7 +9,7 @@
 	margin:1% 1%;
 
 	.login{
-		color:#2196F3;
+		color:@dodger-blue;
 		margin:0 0 20px 50%;
 		text-decoration:underline;
 		font-weight:bold;
