--- a/less/navigation.less
+++ b/less/navigation.less
@@ -8,7 +8,7 @@
 	display:flex;
 	justify-content: flex-end;
 	align-items:center;
-	background-color: #0A2738;
+	background-color: @tiber;
 	margin:0 0 10px 0;
 	height: 46px;
 	
