--- a/less/variables.less
+++ b/less/variables.less
@@ -1,3 +1,10 @@
 /* VARIABLES LESS Document */
 
-@dodger-blue: #2196F3;;
+
+//Mobile Response
+@mobile: ~"(max-width:480px)";
+
+//Color Vars
+@dodger-blue: #2196F3;
+
+@tiber: #0A2738;
