partial section with text and image needs proper layout

--- a/css/index.css
+++ b/css/index.css
@@ -139,14 +139,14 @@ html {
 }
 html,
 body {
-  font-family: 'Ubuntu', sans-serif;
+  font-family: 'Roboto Slab', serif;
 }
 h1,
 h2,
 h3,
 h4,
 h5 {
-  font-family: 'Russo One', sans-serif;
+  font-family: 'Roboto Slab', serif;
 }
 h1 {
   font-size: 3.5rem;
@@ -198,6 +198,37 @@ footer {
   align-items: center;
 }
 /*HOME-PAGE LESS Document */
-html {
-  background-color: red;
+.main-content {
+  margin-top: 30px;
+  /*border: solid 5px black;*/
+}
+.divContainer {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  /*background-color: orange;*/
+}
+.divContainer .words {
+  /*border: 3px red solid;*/
+  /*background-color: yellow;*/
+}
+.divContainer .words h1 {
+  text-align: center;
+}
+.divContainer .words .btn {
+  /*border: 2px solid black;*/
+  text-align: center;
+  color: white;
+  padding-top: 7px;
+  background-color: #2196F3;
+  margin: 0 10px 20px;
+  cursor: pointer;
+  width: 200px;
+  height: 35px;
+  font-size: 2rem;
+  border-radius: 10px;
+}
+img {
+  width: 500px;
+  height: 350px;
 }
