--- a/less/home-page.less
+++ b/less/home-page.less
@@ -1,2 +1,44 @@
 /*HOME-PAGE LESS Document */
 
+.main-content{
+    margin-top: 30px;
+    /*border: solid 5px black;*/
+}
+.divContainer{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    /*background-color: orange;*/
+    .image{
+        
+        
+    }
+    .words{
+        /*border: 3px red solid;*/
+        
+        /*background-color: yellow;*/
+        h1{
+            text-align: center;
+        }
+        .btn{
+            /*border: 2px solid black;*/
+            text-align: center;
+            color: white;
+            padding-top: 7px;
+            background-color: #2196F3;
+            margin: 0 10px 20px;
+            cursor: pointer;
+            width: 200px;
+            height: 35px;
+            font-size: 2rem;
+            border-radius: 10px;
+        }
+    }
+}
+
+
+img{    
+    width: 500px;
+    height: 350px;
+}
+
