--- a/less/global.less
+++ b/less/global.less
@@ -10,12 +10,12 @@ html {
 }
 
 html, body {
-  font-family: 'Ubuntu', sans-serif;
+  font-family: 'Roboto Slab', serif;
 
 }
 
 h1, h2, h3, h4, h5 {
-  font-family: 'Russo One', sans-serif;
+  font-family: 'Roboto Slab', serif;
 }
 
 h1{
