--- a/less/home-page.less
+++ b/less/home-page.less
@@ -7,20 +7,22 @@
 .divContainer{
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    align-items: center;
     /*background-color: orange;*/
     .image{
         
         
     }
     .words{
-        /*border: 3px red solid;*/
-        
-        /*background-color: yellow;*/
+		
+		width:50%;
+		
         h1{
             text-align: center;
         }
-        .btn{
+        
+    }
+	.btn{
             /*border: 2px solid black;*/
             text-align: center;
             color: white;
@@ -33,11 +35,10 @@
             font-size: 2rem;
             border-radius: 10px;
         }
-    }
 }
 
 
-img{    
+.phone-img{    
     width: 500px;
     height: 350px;
 }
