--- a/less/global.less
+++ b/less/global.less
@@ -19,7 +19,10 @@ h1, h2, h3, h4, h5 {
 }
 
 h1{
-	font-size:3.5rem;
+	font-style: normal;
+	font-weight: bold;
+	font-size: 60px;
+	line-height: 79px;
 }
 
 h2 {
