--- a/css/index.css
+++ b/css/index.css
@@ -253,18 +253,35 @@ footer {
   text-align: left;
   margin: 0 0 5% 0;
 }
-.divContainer .btn {
-  /*border: 2px solid black;*/
-  text-align: center;
-  color: white;
-  padding-top: 7px;
+.divContainer .sign-up-btn {
+  display: block;
   background-color: #2196F3;
+  color: white;
+  border: 0.5px solid;
+  border-color: white;
+  border-radius: 10px;
+  padding-top: 7px;
   margin: 0 10px 20px;
   cursor: pointer;
   width: 328px;
   height: 35px;
   font-size: 2rem;
+  text-align: center;
+}
+.divContainer .log-in-btn {
+  display: block;
+  background-color: white;
+  color: #2196F3;
+  border: 0.5px solid;
+  border-color: #2196F3;
   border-radius: 10px;
+  padding-top: 7px;
+  margin: 0 10px 20px;
+  cursor: pointer;
+  width: 328px;
+  height: 35px;
+  font-size: 2rem;
+  text-align: center;
 }
 .phone-img {
   width: 30%;
