--- a/css/index.css
+++ b/css/index.css
@@ -162,6 +162,17 @@ h2 {
   font-size: 48px;
   line-height: 63px;
 }
+@media (max-width:480px) {
+  h2 {
+    font-style: normal;
+    font-weight: bold;
+    font-size: 30px;
+    line-height: 40px;
+    display: flex;
+    align-items: center;
+    text-align: center;
+  }
+}
 h3 {
   font-size: 2.8rem;
 }
@@ -195,6 +206,11 @@ a {
   display: flex;
   justify-content: space-evenly;
 }
+@media (max-width:480px) {
+  .navigation {
+    display: none;
+  }
+}
 .header-container {
   display: flex;
   justify-content: flex-start;
@@ -202,17 +218,44 @@ a {
   padding: 0 5%;
   margin: 1% 1%;
 }
+@media (max-width:480px) {
+  .header-container {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+}
 .header-container .login {
   color: #2196F3;
-  margin: 0 0 20px 50%;
+  margin: 0 0 20px 0%;
   text-decoration: underline;
   font-weight: bold;
+}
+@media (max-width:480px) {
+  .header-container .login {
+    display: none;
+  }
 }
 .header-container h2 {
   margin: 0 0 0 10px;
 }
+@media (max-width:480px) {
+  .header-container h2 {
+    margin: 10px 0 0 0;
+  }
+}
 .header-container p {
   margin: 0 0 0 30px;
+}
+@media (max-width:480px) {
+  .header-container p {
+    display: none;
+  }
+}
+@media (max-width:480px) {
+  .header-container .logo {
+    display: none;
+  }
 }
 .signup {
   text-decoration: underline;
@@ -241,17 +284,50 @@ footer {
   align-items: center;
   /*background-color: orange;*/
 }
+@media (max-width:480px) {
+  .divContainer {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+  }
+}
 .divContainer .section-content {
   width: 40%;
   padding: 0 5% 0 0;
+}
+@media (max-width:480px) {
+  .divContainer .section-content {
+    width: 60%;
+    margin: 1% 0 0 0;
+  }
 }
 .divContainer .words h1 {
   text-align: left;
   margin: 0 0 5% 0;
 }
+@media (max-width:480px) {
+  .divContainer .words h1 {
+    font-style: normal;
+    font-weight: bold;
+    font-size: 24px;
+    line-height: 32px;
+    display: flex;
+    align-items: center;
+  }
+}
 .divContainer .words p {
   text-align: left;
   margin: 0 0 5% 0;
+}
+@media (max-width:480px) {
+  .divContainer .words p {
+    font-style: normal;
+    font-weight: normal;
+    font-size: 16px;
+    line-height: 21px;
+    display: flex;
+    align-items: center;
+  }
 }
 .divContainer .sign-up-btn {
   display: block;
@@ -268,6 +344,11 @@ footer {
   font-size: 2rem;
   text-align: center;
 }
+@media (max-width:480px) {
+  .divContainer .sign-up-btn {
+    width: 296px;
+  }
+}
 .divContainer .log-in-btn {
   display: block;
   background-color: white;
@@ -283,6 +364,16 @@ footer {
   font-size: 2rem;
   text-align: center;
 }
+@media (max-width:480px) {
+  .divContainer .log-in-btn {
+    width: 296px;
+  }
+}
 .phone-img {
   width: 30%;
+}
+@media (max-width:480px) {
+  .phone-img {
+    width: 100%;
+  }
 }
