--- a/less/global.less
+++ b/less/global.less
@@ -32,6 +32,16 @@ h2 {
 	font-weight: bold;
 	font-size: 48px;
 	line-height: 63px;
+	
+	@media @mobile{
+		font-style: normal;
+		font-weight: bold;
+		font-size: 30px;
+		line-height: 40px;
+		display: flex;
+		align-items: center;
+		text-align: center;
+	}
 }
 
 h3 {
