--- a/less/global.less
+++ b/less/global.less
@@ -19,10 +19,7 @@ h1, h2, h3, h4, h5 {
 }
 
 h1{
-	font-style: normal;
-	font-weight: bold;
-	font-size: 60px;
-	line-height: 79px;
+	font-size:3.5rem;
 }
 
 h2 {
@@ -32,16 +29,6 @@ h2 {
 	font-weight: bold;
 	font-size: 48px;
 	line-height: 63px;
-	
-	@media @mobile{
-		font-style: normal;
-		font-weight: bold;
-		font-size: 30px;
-		line-height: 40px;
-		display: flex;
-		align-items: center;
-		text-align: center;
-	}
 }
 
 h3 {
