--- a/less/how_it_works.less
+++ b/less/how_it_works.less
@@ -1,2 +1,30 @@
 /* HOW IT WORKS LESS Document */
 
+
+.how-main{
+	display:flex;
+	flex-direction:row-reverse;
+	justify-content:center;
+	padding: 5%;
+	
+	h1{
+		font-style: normal;
+		font-weight: bold;
+		font-size: 60px;
+		line-height: 79px;
+		display: flex;
+		align-items: center;
+	}
+	
+	p{
+		font-style: normal;
+		font-weight: normal;
+		font-size: 24px;
+		line-height: 32px;
+	}
+	
+	.chart{
+		width:40%;
+		height:40%;
+	}
+}
