reinstated the mobile response aspects and applied them to how it works page

--- a/less/home-page.less
+++ b/less/home-page.less
@@ -31,6 +31,26 @@
 		.custom-btn(white, @dodger-blue, @dodger-blue);
 	}
 	
+	@media @mobile{
+		
+		display:flex;
+		flex-direction:column;
+		justify-content:center;
+		padding:5%;
+		
+		.phone-img{
+			width:100%
+		}
+		
+		h1{
+			font-size:24px;
+		}
+		
+		p{
+			font-size:16px;
+		}
+		
+	}
 }
 
 
