--- a/less/how_it_works.less
+++ b/less/how_it_works.less
@@ -27,4 +27,25 @@
 		width:40%;
 		height:40%;
 	}
+	
+	@media @mobile{
+		
+		display:flex;
+		flex-direction:column;
+		justify-content:center;
+		padding:5%;
+		
+		.chart{
+			width:100%
+		}
+		
+		h1{
+			font-size:24px;
+		}
+		
+		p{
+			font-size:16px;
+		}
+		
+	}
 }
