--- a/css/index.css
+++ b/css/index.css
@@ -192,6 +192,11 @@ a {
   display: flex;
   justify-content: space-evenly;
 }
+@media (max-width:480px) {
+  .navigation {
+    display: none;
+  }
+}
 .header-container {
   display: flex;
   justify-content: flex-start;
@@ -210,6 +215,20 @@ a {
 }
 .header-container p {
   margin: 0 0 0 30px;
+}
+@media (max-width:480px) {
+  .header-container {
+    display: flex;
+    justify-content: center;
+  }
+  .header-container .logo,
+  .header-container p,
+  .header-container .login {
+    display: none;
+  }
+  .header-container h2 {
+    font-size: 30px;
+  }
 }
 .signup {
   text-decoration: underline;
@@ -262,6 +281,8 @@ footer {
   border-radius: 10px;
   margin: 2% 0;
 }
+@media (max-width:480px) {
+}
 .main-content .log-in-btn {
   background-color: white;
   color: #2196F3;
@@ -276,6 +297,25 @@ footer {
   font-size: 2rem;
   border-radius: 10px;
   margin: 2% 0;
+}
+@media (max-width:480px) {
+}
+@media (max-width:480px) {
+  .main-content {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    padding: 5%;
+  }
+  .main-content .phone-img {
+    width: 100%;
+  }
+  .main-content h1 {
+    font-size: 24px;
+  }
+  .main-content p {
+    font-size: 16px;
+  }
 }
 .phone-img {
   width: 50%;
@@ -306,3 +346,22 @@ footer {
   width: 40%;
   height: 40%;
 }
+@media (max-width:480px) {
+  .how-main {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    padding: 5%;
+  }
+  .how-main .chart {
+    width: 100%;
+  }
+  .how-main h1 {
+    font-size: 24px;
+  }
+  .how-main p {
+    font-size: 16px;
+  }
+}
+/* REVIEWS LESS Document */
+/* MEET THE TEAM LESS Document */
