--- a/less/reviews.less
+++ b/less/reviews.less
@@ -1,2 +1,20 @@
 /* REVIEWS LESS Document */
-
+section{
+    /*border: black 5px solid;*/
+    .tableContainer{
+        /*border: red 5px solid;*/
+        h1{
+            text-align: center;
+        }
+        .tableDiv{
+            font-size: 20px;
+            margin-top: 20px;
+            display: flex;
+            justify-content: center;
+            table, th, td {
+                border: 1px solid black;
+                border-collapse: collapse;
+              }
+        }
+    }
+}
