--- a/less/home-page.less
+++ b/less/home-page.less
@@ -7,6 +7,10 @@
 	justify-content:center;
 	padding: 5%;
 	
+	.section-content{
+		padding: 0 2%;
+	}
+	
 	h1{
 		font-style: normal;
 		font-weight: bold;
