fixed the disconnect between reviews.less and css

--- a/css/index.css
+++ b/css/index.css
@@ -192,6 +192,11 @@ a {
   display: flex;
   justify-content: space-evenly;
 }
+@media (max-width:480px) {
+  .navigation {
+    display: none;
+  }
+}
 .header-container {
   display: flex;
   justify-content: flex-start;
@@ -240,93 +245,6 @@ footer {
   justify-content: center;
   align-items: center;
 }
-/*HOME-PAGE LESS Document */
-.main-content {
-  display: flex;
-  flex-direction: row-reverse;
-  justify-content: center;
-  padding: 5%;
-}
-.main-content .section-content {
-  padding: 0 2%;
-}
-.main-content h1 {
-  font-style: normal;
-  font-weight: bold;
-  font-size: 60px;
-  line-height: 79px;
-  display: flex;
-  align-items: center;
-}
-.main-content p {
-  font-style: normal;
-  font-weight: normal;
-  font-size: 24px;
-  line-height: 32px;
-}
-.main-content .sign-up-btn {
-  background-color: #2196F3;
-  color: white;
-  border: solid 0.5px;
-  border-color: white;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  cursor: pointer;
-  width: 448px;
-  height: 56px;
-  font-size: 2rem;
-  border-radius: 10px;
-  margin: 2% 0;
-}
-@media (max-width:480px) {
-  .main-content .sign-up-btn {
-    width: 296px;
-    height: 46px;
-  }
-}
-.main-content .log-in-btn {
-  background-color: white;
-  color: #2196F3;
-  border: solid 0.5px;
-  border-color: #2196F3;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  cursor: pointer;
-  width: 448px;
-  height: 56px;
-  font-size: 2rem;
-  border-radius: 10px;
-  margin: 2% 0;
-}
-@media (max-width:480px) {
-  .main-content .log-in-btn {
-    width: 296px;
-    height: 46px;
-  }
-}
-@media (max-width:480px) {
-  .main-content {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    padding: 5%;
-  }
-  .main-content .phone-img {
-    width: 100%;
-  }
-  .main-content h1 {
-    font-size: 24px;
-  }
-  .main-content p {
-    font-size: 16px;
-  }
-}
-.phone-img {
-  width: 50%;
-  height: 50%;
-}
 /* HOW IT WORKS LESS Document */
 .how-main {
   display: flex;
@@ -370,24 +288,25 @@ footer {
   }
 }
 /* REVIEWS LESS Document */
-  section{
-    /*border: black 5px solid;*/
-    .tableContainer{
-        /*border: red 5px solid;*/
-        h1{
-            text-align: center;
-        }
-        .tableDiv{
-            font-size: 20px;
-            margin-top: 20px;
-            display: flex;
-            justify-content: center;
-            table, th, td {
-                border: 1px solid black;
-                border-collapse: collapse;
-              }
-        }
-    }
+section {
+  /*border: black 5px solid;*/
 }
-  
+section .tableContainer {
+  /*border: red 5px solid;*/
+}
+section .tableContainer h1 {
+  text-align: center;
+}
+section .tableContainer .tableDiv {
+  font-size: 20px;
+  margin-top: 20px;
+  display: flex;
+  justify-content: center;
+}
+section .tableContainer .tableDiv table,
+section .tableContainer .tableDiv th,
+section .tableContainer .tableDiv td {
+  border: 1px solid black;
+  border-collapse: collapse;
+}
 /* MEET THE TEAM LESS Document */
