removed footer import variable because that was keeping my less from working added links to login and signup from team page

--- a/css/index.css
+++ b/css/index.css
@@ -234,70 +234,6 @@ a {
   text-decoration: underline;
   font-weight: bold;
 }
-/* HOW IT WORKS LESS Document */
-.how-main {
-  display: flex;
-  flex-direction: row-reverse;
-  justify-content: center;
-  padding: 5%;
-}
-.how-main h1 {
-  font-style: normal;
-  font-weight: bold;
-  font-size: 60px;
-  line-height: 79px;
-  display: flex;
-  align-items: center;
-}
-.how-main p {
-  font-style: normal;
-  font-weight: normal;
-  font-size: 24px;
-  line-height: 32px;
-}
-.how-main .chart {
-  width: 40%;
-  height: 40%;
-}
-@media (max-width:480px) {
-  .how-main {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    padding: 5%;
-  }
-  .how-main .chart {
-    width: 100%;
-  }
-  .how-main h1 {
-    font-size: 24px;
-  }
-  .how-main p {
-    font-size: 16px;
-  }
-}
-/* REVIEWS LESS Document */
-section {
-  /*border: black 5px solid;*/
-}
-section .tableContainer {
-  /*border: red 5px solid;*/
-}
-section .tableContainer h1 {
-  text-align: center;
-}
-section .tableContainer .tableDiv {
-  font-size: 20px;
-  margin-top: 20px;
-  display: flex;
-  justify-content: center;
-}
-section .tableContainer .tableDiv table,
-section .tableContainer .tableDiv th,
-section .tableContainer .tableDiv td {
-  border: 1px solid black;
-  border-collapse: collapse;
-}
 /*HOME-PAGE LESS Document */
 .main-content {
   display: flex;
@@ -438,7 +374,8 @@ section .tableContainer h1 {
   text-align: center;
 }
 section .tableContainer .tableDiv {
-  font-size: 20px;
+  font-size: 50px;
+  color: #2196F3;
   margin-top: 20px;
   display: flex;
   justify-content: center;
@@ -450,3 +387,6 @@ section .tableContainer .tableDiv td {
   border-collapse: collapse;
 }
 /* MEET THE TEAM LESS Document */
+h1 {
+  text-decoration: underline;
+}
