--- a/less/reviews.less
+++ b/less/reviews.less
@@ -7,7 +7,8 @@ section{
             text-align: center;
         }
         .tableDiv{
-            font-size: 20px;
+            font-size: 50px;
+            color: @dodger-blue;
             margin-top: 20px;
             display: flex;
             justify-content: center;
