--- a/less/navigation.less
+++ b/less/navigation.less
@@ -31,11 +31,58 @@
 	padding: 0 5%;
 	margin:1% 1%;
 
+	/* Dropdown Button */
+	.dropbtn {
+	  background-color: @dodger-blue;
+	  color: white;
+	  padding: 16px;
+	  font-size: 16px;
+		font-family: @font-family;
+	  border: none;
+	}
+
+	/* The container <div> - needed to position the dropdown content */
+	.dropdown {
+	  position: relative;
+	  display: inline-block;
+	}
+
+	/* Dropdown Content (Hidden by Default) */
+	.dropdown-content {
+	  display: none;
+	  position: absolute;
+	  background-color: @dodger-blue;
+	  min-width: 160px;
+	  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+	  z-index: 1;
+	}
+
+	/* Links inside the dropdown */
+	.dropdown-content a {
+	  color: white;
+	  padding: 12px 16px;
+	  text-decoration: none;
+	  display: block;
+	}
+
+	/* Change color of dropdown links on hover */
+	.dropdown-content a:hover {background-color: @dodger-blue;}
+
+	/* Show the dropdown menu on hover */
+	.dropdown:hover .dropdown-content {display: block;}
+
+	/* Change the background color of the dropdown button when the dropdown content is shown */
+	.dropdown:hover .dropbtn {background-color: @dodger-blue;}
+
+	.dropdown{
+		@media (min-width: 481px){
+			display:none;
+		}
+	}
+	
 	.login{
 		color:@dodger-blue;
 		margin:0 0 20px 65%;
-		text-decoration:underline;
-		font-weight:bold;
 	}
 	
 	h2{
@@ -49,6 +96,7 @@
 	@media @mobile{
 		
 			display:flex;
+			flex-direction:column-reverse;
 			justify-content:center;
 		
 		.logo, p, .login{
@@ -62,8 +110,3 @@
 	
 
 }
-
-	.signup{
-		text-decoration:underline;
-		font-weight:bold;
-	}
