added hover animation

--- a/less/global.less
+++ b/less/global.less
@@ -46,6 +46,11 @@ a {
 	text-decoration:none;
 	font-size:1.5rem;
 	color:white;
+	
+	&:hover{
+		text-decoration:underline;
+		font-weight: bold;
+	}
 }
 
 .container {
