--- a/css/index.css
+++ b/css/index.css
@@ -173,6 +173,10 @@ a {
   font-size: 1.5rem;
   color: white;
 }
+a:hover {
+  text-decoration: underline;
+  font-weight: bold;
+}
 .container {
   max-width: 1400px;
   width: 100%;
