--- a/less/global.less
+++ b/less/global.less
@@ -53,6 +53,12 @@ a:hover{
 	font-weight:bold;
 }
 
+ul .current{
+	text-decoration:underline;
+	font-weight:bold;
+}
+
+
 .container {
   max-width: 1400px;
   width: 100%;
