--- a/css/index.css
+++ b/css/index.css
@@ -387,6 +387,32 @@ section .tableContainer .tableDiv td {
   border-collapse: collapse;
 }
 /* MEET THE TEAM LESS Document */
-h1 {
-  text-decoration: underline;
+.cardsContainer {
+  /*border: 5px solid red;*/
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+.card {
+  margin-left: 50px;
+  width: 25%;
+  background-color: white;
+  padding: 10px;
+  border-radius: 5px;
+  min-height: 300px;
+  border: 2px #2196F3 solid;
+}
+.card .row {
+  display: flex;
+}
+.card .row .content h4 {
+  font-size: large;
+  color: #2196F3;
+  margin-bottom: 10px;
+}
+.card .row .content p {
+  font-size: medium;
+}
+.card .row .column {
+  flex: 1;
 }
