--- a/less/meet_the_team.less
+++ b/less/meet_the_team.less
@@ -4,6 +4,12 @@
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
+    @media @mobile{
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+    }
+
 }
 .card {
     margin-left: 50px;
