fixed some minor aesthetic changes

--- a/less/home-page.less
+++ b/less/home-page.less
@@ -18,6 +18,7 @@
 		line-height: 79px;
 		display: flex;
 		align-items: center;
+		margin-bottom: 5%;
 	}
 	
 	p{
@@ -29,6 +30,7 @@
 	
 	.sign-up-btn{
 		.custom-btn(@dodger-blue, white, white);
+		margin:5% 0;
 	}
 	
 	.log-in-btn{
