--- a/less/how_it_works.less
+++ b/less/how_it_works.less
@@ -14,6 +14,7 @@
 		line-height: 79px;
 		display: flex;
 		align-items: center;
+		margin-bottom:5%;
 	}
 	
 	p{
@@ -31,7 +32,7 @@
 	@media @mobile{
 		
 		display:flex;
-		flex-direction:column;
+		flex-direction:row;
 		justify-content:center;
 		padding:5%;
 		
