--- a/css/index.css
+++ b/css/index.css
@@ -401,7 +401,8 @@ section .tableContainer .tableDiv td {
   }
 }
 .card {
-  margin-left: 50px;
+  margin-right: 20px;
+  margin-bottom: 20px;
   width: 25%;
   background-color: white;
   padding: 10px;
@@ -409,17 +410,30 @@ section .tableContainer .tableDiv td {
   min-height: 300px;
   border: 2px #2196F3 solid;
 }
-.card .row {
-  display: flex;
+@media (max-width:480px) {
+  .card {
+    width: auto;
+    margin: auto;
+  }
 }
-.card .row .content h4 {
+.card h3 {
+  text-align: center;
+}
+.card .content {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+.card .content img {
+  margin: auto;
+}
+.card .content h4 {
+  text-align: center;
   font-size: large;
   color: #2196F3;
   margin-bottom: 10px;
 }
-.card .row .content p {
+.card .content p {
   font-size: medium;
-}
-.card .row .column {
-  flex: 1;
+  text-align: center;
 }
