--- a/less/meet_the_team.less
+++ b/less/meet_the_team.less
@@ -12,27 +12,39 @@
 
 }
 .card {
-    margin-left: 50px;
+    margin-right: 20px;
+    margin-bottom: 20px;
     width: 25%;
     background-color: white;
     padding: 10px;
     border-radius: 5px;
     min-height: 300px;
     border: 2px @dodger-blue solid;
-    .row{
-        display: flex;
+    @media @mobile{
+        width: auto;
+        margin: auto;
+    }
+    h3{
+        text-align: center;
+    }
         .content{
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            img{
+                margin: auto;
+            }
             h4{
+                text-align: center;
                 font-size: large;
                 color: @dodger-blue;
                 margin-bottom: 10px;
             }
             p{
                 font-size: medium;
+                text-align: center;
             }
         }
-        .column {
-            flex: 1;
-          }
-    }
+       
+    
 }
