fixed the mobile issue in how it works

--- a/less/how_it_works.less
+++ b/less/how_it_works.less
@@ -32,7 +32,7 @@
 	@media @mobile{
 		
 		display:flex;
-		flex-direction:row;
+		flex-direction:column;
 		justify-content:center;
 		padding:5%;
 		
