--- a/css/index.css
+++ b/css/index.css
@@ -402,7 +402,7 @@ ul .current {
 @media (max-width:480px) {
   .how-main {
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     justify-content: center;
     padding: 5%;
   }
