finalized team page

--- a/less/meet_the_team.less
+++ b/less/meet_the_team.less
@@ -23,6 +23,7 @@
     @media @mobile{
         width: auto;
         margin: auto;
+        border: none;
     }
     h3{
         text-align: center;
