aesthetic changes part 1

--- a/less/home-page.less
+++ b/less/home-page.less
@@ -11,12 +11,18 @@
 		padding: 0 2%;
 	}
 	
+	.words{
+		display:flex;
+		flex-direction:column;
+		justify-content:flex-start;
+	}
+	
 	h1{
 		font-style: normal;
 		font-weight: bold;
 		font-size: 60px;
 		line-height: 79px;
-		display: flex;
+		text-align:left;
 		align-items: center;
 		margin-bottom: 5%;
 	}
