--- a/css/index.css
+++ b/css/index.css
@@ -207,7 +207,7 @@ ul .current {
 }
 .header-container {
   display: flex;
-  justify-content: flex-start;
+  justify-content: space-between;
   align-items: center;
   padding: 0 5%;
   margin: 1% 1%;
@@ -259,9 +259,15 @@ ul .current {
     display: none;
   }
 }
+.header-container .logo-container {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  padding: 0 5%;
+  margin: 1% 1%;
+}
 .header-container .login {
   color: #2196F3;
-  margin: 0 0 20px 65%;
 }
 .header-container h2 {
   margin: 0 0 0 10px;
@@ -294,12 +300,17 @@ ul .current {
 .main-content .section-content {
   padding: 0 2%;
 }
+.main-content .words {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+}
 .main-content h1 {
   font-style: normal;
   font-weight: bold;
   font-size: 60px;
   line-height: 79px;
-  display: flex;
+  text-align: left;
   align-items: center;
   margin-bottom: 5%;
 }
@@ -321,6 +332,7 @@ ul .current {
   width: 448px;
   height: 56px;
   font-size: 2rem;
+  font-family: 'Roboto Slab', serif;
   border-radius: 10px;
   margin: 2% 0;
   margin: 5% 0;
@@ -343,6 +355,7 @@ ul .current {
   width: 448px;
   height: 56px;
   font-size: 2rem;
+  font-family: 'Roboto Slab', serif;
   border-radius: 10px;
   margin: 2% 0;
 }
@@ -379,6 +392,9 @@ ul .current {
   flex-direction: row-reverse;
   justify-content: center;
   padding: 5%;
+}
+.how-main .how-content {
+  padding: 0 2%;
 }
 .how-main h1 {
   font-style: normal;
