--- a/less/navigation.less
+++ b/less/navigation.less
@@ -26,7 +26,7 @@
 
 .header-container{
 	display:flex;
-	justify-content: flex-start;
+	justify-content: space-between;
 	align-items: center;
 	padding: 0 5%;
 	margin:1% 1%;
@@ -80,9 +80,16 @@
 		}
 	}
 	
+	.logo-container{
+		display:flex;
+		flex-direction:row;
+		align-items: center;
+		padding: 0 5%;
+		margin:1% 1%;
+	}
+	
 	.login{
 		color:@dodger-blue;
-		margin:0 0 20px 65%;
 	}
 	
 	h2{
