--- a/less/meet_the_team.less
+++ b/less/meet_the_team.less
@@ -31,9 +31,20 @@
             display: flex;
             flex-direction: column;
             justify-content: center;
+
+			
             img{
-                margin: auto;
+                margin: 3% auto;
+				transition: filter .5s ease-in-out;
+				-webkit-transition: .3s ease-in-out;
+				transition: .3s ease-in-out;
             }
+			
+			img:hover {
+				-webkit-filter: grayscale(100%) blur(3px);
+				filter: grayscale(100%) blur(3px);
+			}
+			
             h4{
                 text-align: center;
                 font-size: large;
