--- a/less/reviews.less
+++ b/less/reviews.less
@@ -2,9 +2,10 @@ section{
     /*border: 2px black solid;*/
     h1{
         text-align: center;
-        margin-bottom: 50px;
+        margin: 50px 0 100px 0;
         font-family: 'Roboto Slab', serif;
         font-weight: bold;
+		font-size:40px;
     }
 }
 .container{
