--- a/css/index.css
+++ b/css/index.css
@@ -260,6 +260,7 @@ ul .current {
   }
 }
 .header-container .logo-container {
+  width: 50%;
   display: flex;
   flex-direction: row;
   align-items: center;
