--- a/less/meet_the_team.less
+++ b/less/meet_the_team.less
@@ -31,8 +31,11 @@
             display: flex;
             flex-direction: column;
             justify-content: center;
-
 			
+            img{
+                margin: 3% auto;
+				
+            }
             h4{
                 text-align: center;
                 font-size: large;
