added bullet points for bios

--- a/css/index.css
+++ b/css/index.css
@@ -543,7 +543,7 @@ section h1 {
   color: #2196F3;
   margin-bottom: 10px;
 }
-.card .content p {
-  font-size: medium;
+.card .content ul {
   text-align: center;
+  font-size: medium;
 }
