--- a/less/meet_the_team.less
+++ b/less/meet_the_team.less
@@ -42,9 +42,9 @@
                 color: @dodger-blue;
                 margin-bottom: 10px;
             }
-            p{
-                font-size: medium;
+            ul{
                 text-align: center;
+                font-size: medium;
             }
         }
        
